--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,13 @@
 name: plug-in_tentorium
-version: '${project.version}'
+version: '3.0'
 main: me.turtle.plugintentorium.Plug_in_tentorium
 api-version: '1.20'
 load: STARTUP
 authors: [turtle]
 description: a plug-in for Tentorium server
 commands:
-  hub:
-    description: teleports you to the hub
+  spawn:
+    description: teleports you to the spawn
     usage: /<command>
 
   knockback:
